--- a/CarListApp/CarListApp/CarListApp.csproj
+++ b/CarListApp/CarListApp/CarListApp.csproj
@@ -27,4 +27,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="VehicleListSQL.mdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
